--- a/_includes/dc/intro.html
+++ b/_includes/dc/intro.html
@@ -1,10 +1,28 @@
 <p>
-  <a href="{{site.dc_site}}">Data Carpentry</a> develops and teaches workshops on the fundamental data skills needed to conduct
-  research. Its target audience is researchers who have little to no prior computational experience, 
-  and its lessons are domain specific, building on learners' existing knowledge to enable them to quickly 
-  apply skills learned to their own research.
-  Participants will be encouraged to help one another
-  and to apply what they have learned to their own research problems.
+  The <a href="https://www.uf-carpentry.org">UF Carpentries Club</a> is offering a one day workshop to help the
+  UF community get started learning R. Need to learn some programming for a class? Have data
+  you're scared to work with in Excel? Want to collaborate effectively with your peers?
+  We were there once too. Come start learning with us.
+</p>
+<p>
+  Our instructors are trained by the Carpentries in evidence-based pedagogy and our 
+  materials have been developed collaboratively over years by dozens of contributors.
+  The <a href="https://informatics.institute.ufl.edu/">University of Florida Informatics Institute</a>
+  and <a href="https://biodiversity.institute.ufl.edu/">Biodiversity Institute</a>
+  have generously volunteered space and resources for this workshop in order to
+  advance the skillset of the UF community. The organizers, instructors, and helpers 
+  are volunteering their time to help UF, and you!
+</p>
+<p>
+  The international <a href="http://datacarpentry.org">Data Carpentry</a> organization
+  develops and teaches workshops on the fundamental data skills needed to conduct 
+  research. Our mission is to provide researchers high-quality, domain-specific 
+  training covering the full lifecycle of data-driven research. Our lessons are domain 
+  specific, from life and physical sciences to social science and build on the existing 
+  knowledge of learners to enable them to quickly apply skills learned to their own 
+  research. Our initial target audience is learners who have little to no prior computational 
+  experience. We create a friendly environment for learning to empower researchers and enable 
+  data driven discovery.
 </p>
 <p align="center">
   <em>
@@ -13,3 +31,5 @@
     "<a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510">Good Enough Practices for Scientific Computing</a>".
   </em>
 </p>
+
+
